redoing doubleElimination